--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,8 @@
 @import "buttons";
 @import "form";
 @import "nprogress";
+@import "table";
+@import "etc";
 
 /* Utilities */
 @import "tailwindcss/utilities";
