save signature path in db; a little cleanup in Feedback Controller; fixed bugs in creating feedback

--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -1,5 +1,7 @@
-input, select, textarea, button, div, a {
-  &:focus, &:active {
-    outline: none;
+@layer base {
+  input, select, textarea, button, div, a {
+    &:focus, &:active {
+      outline: none;
+    }
   }
 }
