--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,19 +1,20 @@
-/* Reset */
+/* Base */
 @import "tailwindcss/base";
-@import "reset";
-
 /* Components */
 @import "tailwindcss/components";
-@import "buttons";
-@import "form";
-@import "nprogress";
-@import "table";
-/* @import "etc"; */
-
-
 /* Utilities */
 @import "tailwindcss/utilities";
 
-/*! purgecss start ignore */
-@import "pretty-checkbox/dist/pretty-checkbox.min.css";
-/*! purgecss end ignore */
+/* purgecss start ignore */
+@import "reset";
+@import "buttons";
+@import "form";
+@import "nprogress";
+/* @import "table"; */
+@import "pretty-checkbox/dist/pretty-checkbox.min.css"; 
+/* purgecss end ignore */
+
+
+
+
+
