--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -1,63 +1,66 @@
-.btn-indigo {
-  @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-indigo-600 rounded;
+@layer components{
 
-  &:hover, &:focus { @apply bg-green-500 }
-}
+  .btn-indigo {
+    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-indigo-600 rounded;
 
-.btn-red {
-  @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-red-600 rounded;
+    &:hover, &:focus { @apply bg-green-500 }
+  }
 
-  &:hover, &:focus { @apply bg-orange-500 }
-}
+  .btn-red {
+    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-red-600 rounded;
 
-.btn-green {
-  @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-green-600 rounded;
+    &:hover, &:focus { @apply bg-orange-500 }
+  }
 
-  &:hover, &:focus { @apply bg-orange-500 }
-}
+  .btn-green {
+    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-green-600 rounded;
 
-.btn-prev {
-  @apply h-full p-2 text-xl font-bold text-white whitespace-no-wrap bg-gray-500 rounded;
+    &:hover, &:focus { @apply bg-orange-500 }
+  }
 
-  &:hover, &:focus { @apply bg-gray-900 }
-}
+  .btn-prev {
+    @apply h-full p-2 text-xl font-bold text-white whitespace-no-wrap bg-gray-500 rounded;
 
-.btn-next {
-  @apply h-full p-2 text-xl font-bold text-white whitespace-no-wrap bg-green-500 rounded;
+    &:hover, &:focus { @apply bg-gray-900 }
+  }
 
-  &:hover, &:focus { @apply bg-green-900 }
-}
+  .btn-next {
+    @apply h-full p-2 text-xl font-bold text-white whitespace-no-wrap bg-green-500 rounded;
 
-.btn-gray {
-  @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-gray-500 rounded;
+    &:hover, &:focus { @apply bg-green-900 }
+  }
 
-  &:hover, &:focus { @apply bg-gray-800 }
-}
+  .btn-gray {
+    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-gray-500 rounded;
 
-.btn-6xl {
-  @apply px-12 py-8 text-6xl font-bold;
-}
+    &:hover, &:focus { @apply bg-gray-800 }
+  }
 
-.btn-spinner,
-.btn-spinner:after {
-  border-radius: 50%;
-  width: 1.5em;
-  height: 1.5em;
-}
+  .btn-6xl {
+    @apply px-12 py-8 text-6xl font-bold;
+  }
 
-.btn-spinner {
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: .2em solid white;
-  border-right: .2em solid white;
-  border-bottom: .2em solid white;
-  border-left: .2em solid transparent;
-  transform: translateZ(0);
-  animation: spinning 1s infinite linear;
-}
+  .btn-spinner,
+  .btn-spinner:after {
+    border-radius: 50%;
+    width: 1.5em;
+    height: 1.5em;
+  }
 
-@keyframes spinning {
-  0% { transform: rotate(0deg) }
-  100% { transform: rotate(360deg) }
+  .btn-spinner {
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: .2em solid white;
+    border-right: .2em solid white;
+    border-bottom: .2em solid white;
+    border-left: .2em solid transparent;
+    transform: translateZ(0);
+    animation: spinning 1s infinite linear;
+  }
+
+  @keyframes spinning {
+    0% { transform: rotate(0deg) }
+    100% { transform: rotate(360deg) }
+  }
 }
