--- a/resources/css/table.css
+++ b/resources/css/table.css
@@ -1,47 +1,50 @@
-.table {
-  display: flex;
-  flex-flow: column nowrap;
-  font-size: .8rem;
-  margin: 0.5rem;
-  line-height: 1.5;
-  border-bottom: 1px solid #d0d0d0;
-  flex: 1 1 auto;
-}
+@layer components {
 
-.th {
-  display: none;
-  font-weight: 700;
-  background-color: #f2f2f2;
-}
+  .table {
+    display: flex;
+    flex-flow: column nowrap;
+    font-size: .8rem;
+    margin: 0.5rem;
+    line-height: 1.5;
+    border-bottom: 1px solid #d0d0d0;
+    flex: 1 1 auto;
+  }
 
-.th > .td {
-  white-space: normal;
-  justify-content: center;
-}
+  .th {
+    display: none;
+    font-weight: 700;
+    background-color: #f2f2f2;
+  }
 
-.tr {
-  width: 100%;
-  display: flex;
-  flex-flow: row nowrap;
-}
+  .th > .td {
+    white-space: normal;
+    justify-content: center;
+  }
 
-.tr:nth-of-type(even) {
-  background-color: #f2f2f2;
-}
+  .tr {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+  }
 
-.tr:nth-of-type(odd) {
-  background-color: #ffffff;
-}
+  .tr:nth-of-type(even) {
+    background-color: #f2f2f2;
+  }
 
-.td {
-  display: flex;
-  /* flex-flow: row nowrap; */
-  flex-grow: 1;
-  /* flex-basis: 0; */
-  word-break: break-word;
-  /* overflow: hidden; */
-  text-overflow: ellipsis;
-  min-width: 0px;
-  white-space: nowrap;
-  border-bottom: 1px solid #d0d0d0;
+  .tr:nth-of-type(odd) {
+    background-color: #ffffff;
+  }
+
+  .td {
+    display: flex;
+    /* flex-flow: row nowrap; */
+    flex-grow: 1;
+    /* flex-basis: 0; */
+    word-break: break-word;
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
+    min-width: 0px;
+    white-space: nowrap;
+    border-bottom: 1px solid #d0d0d0;
+  }
 }
