--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -4,6 +4,7 @@
     @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-indigo-600 rounded;
 
     &:hover, &:focus { @apply bg-green-500 }
+    &:disabled { @apply bg-gray-500 }
   }
 
   .btn-red {
