--- a/public/css/print.css
+++ b/public/css/print.css
@@ -4,11 +4,19 @@
     print-color-adjust: exact;
   }
   body{ 
-    font-size: 10px;
-    /* font-family: Arial, Helvetica, sans-serif; */
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 11px;
+    font-family: Arial, Helvetica, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+  }
+  .text-2xl {
+    font-size: 1.5em;
+  }
+  .text-xl {
+    font-size: 1.25em;
+  }
+  .text-lg {
+    font-size: 1.125em;
   }
   .text-sm {
     font-size: 0.875em;
