--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -1,38 +1,38 @@
 @layer components{
 
   .btn-indigo {
-    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-indigo-600 rounded;
+    @apply px-6 py-3 text-sm font-bold text-white bg-indigo-600 rounded whitespace-nowrap;
 
     &:hover, &:focus { @apply bg-green-500 }
     &:disabled { @apply bg-gray-500 }
   }
 
   .btn-red {
-    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-red-600 rounded;
+    @apply px-6 py-3 text-sm font-bold text-white bg-red-600 rounded whitespace-nowrap;
 
-    &:hover, &:focus { @apply bg-orange-500 }
+    &:hover, &:focus { @apply bg-yellow-700 }
   }
 
   .btn-green {
-    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-green-600 rounded;
+    @apply px-6 py-3 text-sm font-bold text-white bg-green-600 rounded whitespace-nowrap;
 
-    &:hover, &:focus { @apply bg-orange-500 }
+    &:hover, &:focus { @apply bg-yellow-700 }
   }
 
   .btn-prev {
-    @apply h-full p-2 text-xl font-bold text-white whitespace-no-wrap bg-gray-500 rounded;
+    @apply h-full p-2 text-xl font-bold text-white bg-gray-500 rounded whitespace-nowrap;
 
     &:hover, &:focus { @apply bg-gray-900 }
   }
 
   .btn-next {
-    @apply h-full p-2 text-xl font-bold text-white whitespace-no-wrap bg-green-500 rounded;
+    @apply h-full p-2 text-xl font-bold text-white bg-green-500 rounded whitespace-nowrap;
 
     &:hover, &:focus { @apply bg-green-900 }
   }
 
   .btn-gray {
-    @apply px-6 py-3 text-sm font-bold text-white whitespace-no-wrap bg-gray-500 rounded;
+    @apply px-6 py-3 text-sm font-bold text-white bg-gray-500 rounded whitespace-nowrap;
 
     &:hover, &:focus { @apply bg-gray-800 }
   }
